[package]
name = "cisco-binary-game-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.32.0-rc.8"
tokio = { version = "1", features = ["full"] }
regex = "1"

[[bin]]
name = "cisco-binary-game-bot"
path = "main.rs"
